syntax = "proto3";

package Protocol;

import 'struct.proto';

message C2L_CreateRoomRequest {
    string name = 1;
    int32 maxUserNum = 2;
}

message L2C_CreateRoomResponse {
    bool isSuccess = 1;
    RoomData room = 2;
}

message L2B_CreateGameRoomRequest {
  int32 roomId = 1;
  int32 maxPlayers = 2; //게임에 참가하는 인원수
}

message B2L_CreateGameRoomRespone {
  bool isCreated = 1;
  int32 roomId = 2;
}

message L2B_GameStartRequest {
    string name = 1;
    int32 maxUserNum = 2;
}

message C2L_GetRoomListRequest {
    
}

message L2C_GetRoomListResponse {
    repeated RoomData rooms = 1;
}

message C2L_JoinRoomRequest {
    int32 roomId = 1;
}

message L2C_JoinRoomResponse {
    bool isSuccess = 1;
    RoomData room = 2;
}

message C2L_LeaveRoomRequest {

}

message L2C_LeaveRoomResponse {
    bool isSuccess = 1;
}

message L2C_LeaveRoomNotification {
    int32 userId = 1;
}

message L2C_JoinRoomNotification {
    UserData joinUser = 1;
}

message C2L_GameStart
{
    int32 userId = 1; //방장(보내는 사람의 )의 I
    uint32 roomId = 2;       // 입장하려는 Room ID
}